--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
 <div id="nav">
     <ul>
-        <li><a [ngClass]="getActive('about')" (click)="goToJobs()">About</a></li>
+        <li><a [ngClass]="getActive('login')" (click)="goToLogin()">Login</a></li>
         <li><a [ngClass]="getActive('jobs')" (click)="goToJobs()">Jobs</a></li>
         <li><a [ngClass]="getActive('contact')" (click)="goToContact()">Contact Us</a></li>
         <li><a [ngClass]="getActive('home')" (click)="goToHome()">Home</a></li>
