Next big update. We are getting there!

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,7 @@
 <body>
 <div id="container">
   <div class="header">
-    <img class="header-img right" src="../../assets/img/Engineer.png">
-    <img class="header-img left" src="../../assets/img/Engineer.png">
+    <img class="header-img-left left" src="../../assets/img/logo.jpg">
     <div class="header-text">
       K & J Building and Development
     </div>
