--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -4,3 +4,7 @@
   //background: url("../../assets/img/heavy_equipment.jpg") 50% 50% no-repeat rgba(0,0,0,0.25);
   background-size: cover;
 }
+
+.home-image {
+  height: 450px;
+}
