--- a/src/app/common-modal/common-modal.component.html
+++ b/src/app/common-modal/common-modal.component.html
@@ -7,21 +7,26 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body">
-                <ng-content select=".modal-body"> </ng-content>
-            </div>
-
             <div *ngIf="blueprintMap" id = 'blueprint-list'>
                 <ul>
                     <li *ngFor="let blueprint of blueprintMap | keyvalue">
-                        <div (click)="getBluePrint(blueprint.value.S)">{{blueprint.key}}</div>
+                        <table>
+                            <tr>
+                                <td><a (click)="getBluePrint(blueprint.value.S)" class="blueprint-file">{{blueprint.key}}</a></td>
+                                <td>
+                                    <img align="right" src="../../assets/img/trash.png" (click)="deleteBlueprint(blueprint)">
+                                    <img align="right" src="../../assets/img/edit.png" (click)="editBlueprint(blueprint)">
+                                </td>
+                            </tr>
+                        </table>
                     </li>
                 </ul>
             </div>
 
             <div class="modal-footer">
                 <div class="pull-left">
-                    <button class="btn btn-default" (click)="hide()"> Cancel </button>
+                    <button class="btn btn-default" (click)="hide()">Close</button>
+                    <button class="btn btn-info btn-sm" (click)="addBlueprint()">Add Blueprint</button>
                 </div>
             </div>
         </div>
