--- a/src/app/common-modal/common-modal.component.scss
+++ b/src/app/common-modal/common-modal.component.scss
@@ -1,12 +1,13 @@
 #blueprint-list {
   ol {
     background: #ff9999;
-    padding: 20px;
+    padding: 10px;
   }
 
   ul {
-    background: #3399ff;
-    padding: 20px;
+    //background: #3399ff;
+    padding: 10px;
+    list-style-type: none;
   }
 
   ol li {
@@ -18,5 +19,10 @@
   ul li {
     background: #cce5ff;
     margin: 5px;
+  }
+
+  .blueprint-file {
+    font-weight: bold;
+    color: #3399ff;
   }
 }
