--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <nav-selector activeLink="home"></nav-selector>
 <div class="center-container">
-    <!--<img src="../../assets/img/heavy_equipment.jpg" id="home-image" class="center alpha-50 home-image"/>-->
+    <img src="../../assets/img/random%20image.jpg" id="home-image" class="center alpha-50 home-image"/>
     <p>We are the guys that can get things done in a jiffy!</p>
     <p>Call us <a href="tel:+(801) 555-5555">(801) 555-5555</a> or <input type="button" value="REQUEST A BID" (click)="goToContact()"/> today!</p>
 </div>
